Resolves: fdo#79178 Crash when opening a form created with a previous version

A regression from c2c530da69152ff9192b9726aa95961803ce9b29 I think. Rework
this to follow the same ctor + init pattern as the others

move the fillCache out of the ctor to acquire the obj first, then
call the extra init before returning it

Change-Id: Ia0dc878654780294a4935f07ac70c4358ca51dfc